# Philosopher ?
### Build: ?

### Added
### Changed
### Fixed


# Philosopher 20181211
### Build: ?

### Added
- All different reports now show the protein identifications.

### Changed
- Report file is now called protein.tsv.
- Columns names were fixed to become synchronized.

### Fixed
- Minor bug fixes.

# Philosopher 20181128
### Build: 201811281548

### Fixed
- Fixed an issue with the MSstats report.
- Minor bug fixes.

# Philosopher 20181119
### Build: 201811191306

### Added
- MSstats and MSstatsTMT compatibel reports added to the report command.
- Reprint / CRApome compatible report added to the abacus command.


# Philosopher 20181116
### Build: 201811161414

### Added
- Combined peptide report added to Abacus.

### Changed
- The Abacus command now supports both peptide and protein combined reports by using the flags --peptide and --protein.
- Abacus combined protein report now is called combined_protein.tsv.
- Peptide reports now have mapped protein information.
- Dependency libraries were updated.

### Fixed
- A problem was not allowing recently downloaded databases to be processed.
- Minor bugs and issues.

# Philosopher 20181011
### Build: 201810111533

### Added
- Support for ENSEMBL databases.

### Fixed
- Minor bug fixes.

# Philosopher 20180924
### Build: 201809241411

### Added
- Minor bug fixes.
- New tutorail added to website.

# Philosopher 20180905
### Build: 201809051532

### Added
- Support for MS3 isobaric tagging.
- Support for TMT 11 plex.

### Fixed
- Minor bug fixes.

# Philosopher 20180823
### Build: 201808231104

### Added
- Glu-C enzyme was added to database formatting.
### Changed
- Background temporary data now is removed after the program is done with the analysis.
### Fixed
- A problem introduced in the last release with the protein to gene razor assignment was fixed.

# Philosopher 20180530
### Build: 201805301634

### Fixed
- Fixed an error when trying to run label free quantification.

# Philosopher 20180524